Javadoc.txt
Loading source file TicTac.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_191
Building tree for all the packages and classes...
Generating ./TicTac.html...
TicTac.java:14: error: invalid use of @param
 *  @param width           Width of the game board.
    ^
TicTac.java:15: error: invalid use of @param
 *  @param height          Height of the game board.
    ^
TicTac.java:16: error: invalid use of @param
 *  @param cells           2D array of indicators of the boards current status.
    ^
TicTac.java:17: error: invalid use of @param
 *  @param score           2D int array that keeps tallies on which player marked the board.
    ^
TicTac.java:18: error: invalid use of @param
 *  @param buttons         2D array of JButtons used to display that state of the cells and to take action events. 
    ^
TicTac.java:19: error: invalid use of @param
 *  @param BlankSpace      The white square icon for a unmarked cell on the game board.
    ^
TicTac.java:20: error: invalid use of @param
 *  @param playerIcon      the Icon that the player uses to mark the board of the game. (X's or O's)  
    ^
TicTac.java:21: error: invalid use of @param
 *  @param player          The current player number, either 1 or 2.
    ^
TicTac.java:22: error: invalid use of @param
 *  @param playerOneScore  The current score for Player 1
    ^
TicTac.java:23: error: invalid use of @param
 *  @param playerTwoScore  The current score for Player 2
    ^
Generating ./package-frame.html...
Generating ./package-summary.html...
Generating ./package-tree.html...
Generating ./constant-values.html...
Generating ./serialized-form.html...
Building index for all the packages and classes...
Generating ./overview-tree.html...
Generating ./index-all.html...
Generating ./deprecated-list.html...
Building index for all classes...
Generating ./allclasses-frame.html...
Generating ./allclasses-noframe.html...
Generating ./index.html...
Generating ./help-doc.html...
10 errors
